<resources>
    <string name="app_name">Dumo-Go</string>
    <string name="welcome_msg">Benvingut a Dumo-GO</string>
    <string name="hide_user">Usuari</string>
    <string name="hide_nom">Nom</string>
    <string name="hide_cognoms">Cognoms</string>
    <string name="hide_dni">DNI (amb lletra)</string>
    <string name="hide_date">Data alta (YYYY-MM-DD)</string>
    <string name="hide_mail">E-mail</string>
    <string name="hide_pass">Contrassenya</string>
    <string name="hide_phone">Telefon</string>
    <string name="hide_bith_date">Data naixement (YYYY-MM-DD)</string>
    <string name="hide_address">Direccio</string>
    <string name="hide_country">Pais</string>
    <string name="change_pass"><b>Canviar la contrassenya</b></string>
    <string name="lost_pass">He perdut la contrassenya</string>
    <string name="btn_login">ENTRAR</string>
    <string name="loading">Conectant...</string>
    <string name="cb_admin">Login com admin</string>
    <string name="ibt_users">Usuaris</string>
    <string name="ibt_profile">Perfil</string>
    <string name="ibt_books">Llibres</string>
    <string name="rb_Admin">Administradors</string>
    <string name="rb_User">Usuaris</string>
    <string name="rb_All">Tots</string>
    <string name="bt_Add_User">Afegeix</string>
    <string name="bt_Change_User">Modifica</string>
    <string name="bt_Delete_User">Esborra</string>
    <string name="ac_Find_Users">Cerca usuari</string>
    <string name="change_info"><b>Canviar la informacio</b></string>
    <string name="dialog_change_pass">Canviar contrassenya</string>
    <string name="bt_save">Guardar</string>
    <string name="bt_cancel">Cancela</string>
    <string name="old_pass">Contrassenya antiga</string>
    <string name="new_pass">Contrassenya nova</string>
    <string name="dialog_add_user">Afegir usuari</string>
    <string name="cb_au_isAdmin">Admin</string>
    <string name="menu_logout">Logout</string>
    <string name="bt_change_info">Modifica</string>
    <string name="bt_change_pass">Canvia \n Contrassenya</string>
    <string name="temporal">Default</string>
    <string name="books_type">Genere</string>
    <string name="books_rate">Valoracio</string>
    <string name="books_by_author">Cerca per autor</string>
    <string name="books_by_title">Cerca per titol</string>
    <string name="ab_title">Afegir llibre</string>
    <string name="ab_name">Titol llibre</string>
    <string name="ab_author">Autor</string>
    <string name="ab_publish_date">Any publicacio(YYYY)</string>
    <string name="ab_type">Genere</string>
    <string name="ab_create_date">Data alta(YYYY-MM-DD)</string>
    <string name="ab_cover">Caratula</string>
    <string name="ab_description">Descripcio</string>
    <string name="ab_rating">Valoracio</string>
    <string name="bt_ab_add">Afegir</string>
    <string name="bt_ab_exit">Cancelar</string>
    <string name="bt_cv_open">Obre</string>
    <string name="bt_cv_delete">Elimina</string>
    <string name="bt_bp_booking">Reservar</string>
    <string name="bt_bp_rate">Puntua</string>
    <string name="bt_bp_booked">RESERVAT</string>
    <string name="dialog_delete_user">Esborrar usuari</string>
    <string name="dialog_delete_book">Esborrar llibre</string>
    <string name="dialog_delete_user_message">Voleu esborrar usuari</string>
    <string name="dialog_delete_book_message">Voleu esborrar llibre</string>
    <string name="ub_new_name">Nou nom del llibre</string>
    <string name="ibt_bookings">Prestecs</string>
    <string name="cb_cv_bookings">Tornat</string>
    <string name="cb_cv_urgent">Fora de termini</string>
    <string name="cb_books_free">Llibre no reservat</string>
</resources>