<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ub_bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:text="TextView"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/et_ub_newName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ub_new_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_ub_author"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ab_author"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_ub_pubDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ab_publish_date"
            android:inputType="date" />

        <Spinner
            android:id="@+id/sp_ub_genre"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <EditText
            android:id="@+id/et_ub_desc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ab_description"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_ub_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/bt_ab_exit" />

            <Button
                android:id="@+id/bt_ub_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/bt_change_info" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>