<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".UserManagement"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_um_typeUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_Admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_Admin" />

            <RadioButton
                android:id="@+id/rb_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_User" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/ac_users"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/ac_Find_Users" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_Add_User" />

        <Button
            android:id="@+id/bt_delete_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_Delete_User" />

    </LinearLayout>

    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"/>

</androidx.appcompat.widget.LinearLayoutCompat>