<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BooksActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_criteris_cerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_books_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/books_type"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_books_topic"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/books_type" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_books_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/books_rate"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_books_rate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/books_rate" />
        </LinearLayout>

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/ac_books_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/books_by_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/ac_books_author"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:hint="@string/books_by_author" />

        <CheckBox
            android:id="@+id/cb_books_free"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cb_books_free" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>