<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AdminMain">

    <ImageButton
        android:id="@+id/ibt_users"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ibt_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_admin"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <TextView
        android:id="@+id/tv_ibt_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibt_users"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ibt_users"
        app:layout_constraintStart_toStartOf="@+id/ibt_users"
        app:layout_constraintTop_toBottomOf="@+id/ibt_users" />

    <ImageButton
        android:id="@+id/ibt_profile_admin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/ibt_profile"
        app:layout_constraintStart_toEndOf="@+id/ibt_users"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_admin"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/tv_ibt_profile_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibt_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ibt_profile_admin"
        app:layout_constraintStart_toStartOf="@+id/ibt_profile_admin"
        app:layout_constraintTop_toBottomOf="@+id/ibt_profile_admin" />

    <TextView
        android:id="@+id/tv_welcome_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibt_books_admin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ibt_books"
        app:layout_constraintStart_toEndOf="@+id/ibt_profile_admin"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_admin"
        app:srcCompat="@drawable/book_image" />

    <TextView
        android:id="@+id/tv_ibt_books_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibt_books"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ibt_books_admin"
        app:layout_constraintStart_toStartOf="@+id/ibt_books_admin"
        app:layout_constraintTop_toBottomOf="@+id/ibt_books_admin" />

    <ImageButton
        android:id="@+id/ibt_bookings"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ibt_bookings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibt_users"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/tv_ibt_bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibt_bookings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ibt_bookings"
        app:layout_constraintStart_toStartOf="@+id/ibt_bookings"
        app:layout_constraintTop_toBottomOf="@+id/ibt_bookings" />

</androidx.constraintlayout.widget.ConstraintLayout>